codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approval_modal_exec_no_reason.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend().vt100().screen().contents()
---


  要运行以下命令吗？

  $ echo hello world

› 1. 是，继续 (y)
  2. 是，对以 `echo hello world` 开头的命令不再询问 (p)
  3. 否，并告诉 Codex 应该怎么做 (esc)

  按 enter 确认，或按 esc 取消
