codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approvals_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  选 择 权 限 模 式

› 1. 默 认       Codex 可 读 取 并 编 辑 当 前 工 作 区 中 的 文 件 ， 也 可 运 行 命 令 。 访 问 互 联 网
               或 编 辑 其 他 文 件 时 需 要 批 准 。
  2. 完 全 访 问   Codex 可 编 辑 当 前 工 作 区 外 的 文 件 ， 并 且 无 需 批 准 即 可 访 问 互 联 网 。 使
               用 时 请 谨 慎 。

  按  enter 确 认 ， 按  esc 返 回
