codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approvals_selection_popup@windows.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: popup
---
  更新模型权限

› 1. 只读（当前）  Codex 可读取当前工作区中的文件。
                          编辑文件或访问互联网都需要审批。
  2. 默认              Codex 可读取并编辑当前工作区中的文件，并可运行命令。 访问互联网或编辑其他文件都需要审批。
  3. 完全访问          Codex 可编辑此工作区外的文件，并可在无需审批的情况下访问互联网。
                          请谨慎使用。

  按 enter 确认，按 esc 返回
