codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approvals_selection_popup@windows_degraded.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 3945
expression: popup
---
  更新模型权限

› 1. 只读（当前）             Codex 可读取当前
                                     工作区中的文件。编辑
                                     文件或访问互联网都需要审批。
  2. 默认（非管理员沙箱）   Codex 可读取并编辑
                                     当前工作区中的文件，并可运行命令。
                                     访问
                                     互联网或编辑其他文件都需要审批。
  3. 完全访问                     Codex 可编辑此工作区外的文件，并且
                                     可在无需审批的情况下访问互联网。
                                     请谨慎使用
                                     。

  非管理员沙箱会保护你的文件，并在大多数情况下阻止网络访问
  。但如果提示词被注入，风险会更高。要
  升级到默认沙箱，请运行 /setup-default-sandbox.
  按 enter 确认，按 esc 返回
