codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui__chatwidget__tests__apps_popup_loading_state.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: before
---
  应 用
  正 在 加 载 已 安 装 和 可 用 的 应 用 ...

› 1. 正 在 加 载 应 用 ...  完 整 列 表 就 绪 后 会 自 动 更 新 。
