codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exec_approval_history_decision_aborted_multiline.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: lines_to_single_string(&aborted_multi)
---
✗ 你已取消执行请求：echo line1 ...
